# kvs-rs

./: .gitignore  Cargo.toml  README.md
benches/: benches.rs  plan_benches.rs
src/: client.rs  command.rs  engine.rs  error.rs  lib.rs  server.rs  store.rs
src/engines/: kvs.rs  mod.rs  sled.rs
src/thread_pool/: mod.rs  naive.rs  rayon.rs  shared_queue.rs
tests/: cli.rs  tests.rs
