[package]
name = "kvs"
version = "0.1.0"
authors = ["Aos Dabbagh <aosdab@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

[dependencies]
serde = "1.0.123"
serde_json = "1.0.50"
structopt = "0.3.21"
thiserror = "1.0.23"

[lib]
test = false

[[bin]]
name = "kvs"
test = false
